# Amaterasu

./: README.md  package.json
.github/workflows/: build.yaml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: controller.rs  main.rs
src-tauri/src/controller/: button.rs  scratch.rs
